# pg-debyte

./: .gitignore  Cargo.toml  README.md
.github/workflows/: core-tests.yml  pg-extension-tests.yml  tests.yml
docker/: pgtest.Dockerfile
examples/readme_by_id/: Cargo.toml
examples/readme_envelope/: Cargo.toml
examples/readme_known_schema/: Cargo.toml
pg_debyte_core/: Cargo.toml
pg_debyte_core/src/: action.rs  codec.rs  encode.rs  envelope.rs  error.rs  lib.rs  registry.rs  types.rs
pg_debyte_core/tests/: decode.rs  encode.rs  envelope.rs  envelope_errors.rs  registry.rs
pg_debyte_ext/: Cargo.toml  pg_debyte_ext.control
pg_debyte_ext/sql/: pg_debyte_ext--0.1.0.sql
pg_debyte_ext/src/: lib.rs
pg_debyte_macros/: Cargo.toml
pg_debyte_macros/src/: lib.rs
pg_debyte_pgrx/: Cargo.toml
pg_debyte_pgrx/src/: lib.rs
pg_debyte_tools/: Cargo.toml
pg_debyte_tools/src/: demo_auto_sql.rs  demo_envelope.rs  demo_payload.rs  demo_second_payload.rs
scripts/: dev.sh  docker-ci-build-examples.sh  docker-ci-test-pg-extension.sh  docker-ci-test-workspace.sh  docker-test.sh  host-lints.sh  host-tests.sh  package-check.sh
