[package]
name = "pg_debyte_ext"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Dmitriy Sergeev <xaneets@gmail.com>"]
description = "Example pg_debyte PostgreSQL extension for PG17"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/Xaneets/pg-debyte"
homepage = "https://github.com/Xaneets/pg-debyte"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_debyte_ext"
path = "./src/bin/pgrx_embed.rs"

[features]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pg_debyte_core = { path = "../pg_debyte_core" }
pg_debyte_pgrx = { path = "../pg_debyte_pgrx" }
pg_debyte_macros = { path = "../pg_debyte_macros" }
serde = { version = "1.0", features = ["derive"] }
uuid = "1.8"
hex = "0.4"
serde_json = "1.0"

pgrx = { version = "0.16.1", default-features = false }
pgrx-tests = { version = "0.16.1", default-features = false }
