[package]
name = "pg_debyte_pgrx"
version = "0.2.1"
edition = "2021"
authors = ["Dmitriy Sergeev <xaneets@gmail.com>"]
description = "pgrx glue for pg_debyte (GUCs and decode helpers)"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/xaneets/pg-debyte"
homepage = "https://github.com/xaneets/pg-debyte"
keywords = ["postgres", "postgresql", "bytea", "json", "pgrx"]
categories = ["database"]

[dependencies]
pg_debyte_core = { version = "0.2.1", path = "../pg_debyte_core" }
serde_json = "1.0"
uuid = "1.8"

pgrx = { version = "0.16.1", default-features = false }

[features]
default = []
pg15 = ["pgrx/pg15"]
pg17 = ["pgrx/pg17"]
