[package]
name = "pg_debyte_tools"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Dmitriy Sergeev <xaneets@gmail.com>"]
description = "Helper binaries for generating pg_debyte demo payloads and envelopes"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/xaneets/pg-debyte"
homepage = "https://github.com/xaneets/pg-debyte"

[[bin]]
name = "demo_payload"
path = "src/demo_payload.rs"

[[bin]]
name = "demo_envelope"
path = "src/demo_envelope.rs"

[[bin]]
name = "demo_auto_sql"
path = "src/demo_auto_sql.rs"

[[bin]]
name = "demo_second_payload"
path = "src/demo_second_payload.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
pg_debyte_core = { version = "0.2.1", path = "../pg_debyte_core" }
uuid = "1.8"
