[package]
name = "readme_by_id"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
pg15 = ["pgrx/pg15", "pg_debyte_pgrx/pg15"]
pg17 = ["pgrx/pg17", "pg_debyte_pgrx/pg17"]

[dependencies]
pgrx = { version = "0.16.1", default-features = false }
pg_debyte_core = { version = "0.2.1", path = "../../pg_debyte_core" }
pg_debyte_macros = { version = "0.2.1", path = "../../pg_debyte_macros" }
pg_debyte_pgrx = { version = "0.2.1", path = "../../pg_debyte_pgrx", default-features = false }
serde = { version = "1.0", features = ["derive"] }
uuid = "1.8"
